# Sauron

./: .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: Bug_report.md  Featue_request.md
.github/workflows/: cd.yml  linting.yml  rust-clippy.yml  rust.yml  sanity-check.yml  sanity-test.yml  smoke-test-yml  smoke-test.yml
docs/: branching-strategy.md  database_updates.md  how_we_are_devops.md  monitoring_realization.md  problems_with_code.txt  reflections.md  software_quality.md  technology.md
legacy/src/: run_forever.sh
legacy/src/backend/: app.py
legacy/src/backend/backup/: whoknowsBACKUP.db
logging/: Dockerfile  README.md  docker-compose.yml
logging/api/: app.js  package-lock.json  package.json
logging/api/util/: query.js
logging/dashboard/: package-lock.json
logging/dashboard/src/: App.svelte
logging/fluentd/: fluent.conf
logging/initdb/: init.sql
rust_rewrite/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.test.yml  docker-compose.yml
rust_rewrite/configs/Nginx/: sauron
rust_rewrite/migrations/: 20250423102417_initial.sql  20250423103132_alter.sql
rust_rewrite/prometheus/: prometheus.yml
rust_rewrite/scripts/: migrate_sqlite_to_postgres.py
rust_rewrite/src/: api.rs  auth.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  repository.rs
rust_rewrite/static/: about.html  login.html  register.html  search.html  sla.html  weather.html
rust_rewrite/static/fragments/: footer.html  header.html
rust_rewrite/static/scripts/: inject.js  search.js  weather.js
rust_rewrite/static/style/: style.css
rust_rewrite/templates/: about.html  login.html  register.html  search.html
rust_rewrite/tests/: api_login_tests.rs  api_logout_tests.rs  api_register_tests.rs  api_search_tests.rs  api_tests.rs  api_weather_tests.rs  quick_dev.rs
src/backend/: app.py
