[package]
name = "rust_rewrite"
version = "0.1.0"
edition = "2021"

[dependencies]

# this should fix docker build issues
openssl = { version = "0.10", features = ["vendored"]}

zip = "=2.4.2"

utoipa = "5.3.1" # for generating OpenApi specs
utoipa-axum = "0.2" # extension for working with axum


axum = "0.8.1" # web framework
axum-macros = "0.5.0" # macros for axum duh

tokio = { version = "1.42.0", features = ["full"] } # features set to full to enable multithreading
hyper = "1.5.2" # HTTP library

tower = "0.5.2" # networking library used by hyper
tower-http = { version = "0.6.2", features = ["cors"] } # HTTP service abstraction
tower-cookies = "0.11.0"
jsonwebtoken = "9" # JWT library

serde = "1.0.217" # serialization library
utoipa-swagger-ui = { version = "9.0.0", features = ["axum", "reqwest"] }

# tokio-rusqlite = "0.6.0" # async SQLite
tokio-rusqlite = { version = "0.6", features = ["bundled"] }
serde_json = "1.0.138"
serde_urlencoded = "0.7.1"
password-worker = "0.4.0"
lazy_static = "1.5.0"
regex = "1.11.1"

reqwest = { version = "0.12", features = ["json"] } # For HTTP requests.
chrono = "0.4" # needed for setting expiration time for JWT

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.0" # for testing HTTP requests
